# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.988 2010/12/04 02:01:51 mpagano Exp $

*git-sources-2.6.37_rc4-r4 (04 Dec 2010)

  04 Dec 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc4-r4.ebuild:
  Version bump

*git-sources-2.6.37_rc4-r3 (03 Dec 2010)

  03 Dec 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc4-r3.ebuild:
  Version bump

*git-sources-2.6.37_rc4-r2 (03 Dec 2010)

  03 Dec 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc4-r2.ebuild:
  Version bump

*git-sources-2.6.37_rc4-r1 (01 Dec 2010)

  01 Dec 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc4-r1.ebuild:
  Version bump

*git-sources-2.6.37_rc4 (30 Nov 2010)

  30 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc4.ebuild:
  Version bump

*git-sources-2.6.37_rc3-r7 (30 Nov 2010)

  30 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc3-r7.ebuild:
  Version bump

*git-sources-2.6.37_rc3-r6 (29 Nov 2010)

  29 Nov 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc3-r6.ebuild:
  Version bump

*git-sources-2.6.37_rc3-r5 (29 Nov 2010)

  29 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc3-r5.ebuild:
  Version bump

*git-sources-2.6.37_rc3-r4 (28 Nov 2010)

  28 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.37_rc3-r4.ebuild:
  Version bump

  27 Nov 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.37_rc2.ebuild, -git-sources-2.6.37_rc2-r1.ebuild,
  -git-sources-2.6.37_rc2-r2.ebuild, -git-sources-2.6.37_rc2-r3.ebuild,
  -git-sources-2.6.37_rc2-r4.ebuild, -git-sources-2.6.37_rc2-r5.ebuild,
  -git-sources-2.6.37_rc2-r6.ebuild, -git-sources-2.6.37_rc2-r7.ebuild:
  Remove old versions

*git-sources-2.6.37_rc3-r3 (27 Nov 2010)

  27 Nov 2010; Michael Pagano <mpagano@gentoo.org>